2018-11-11  Dirk Eddelbuettel  <edd@debian.org>

	* inst/include/Rcpp/vector/Subsetter.h (check_indices): More
	informative error message as suggested by KK

2018-11-09  William Nolan  <will@landale.net>

        * inst/include/Rcpp/vector/Subsetter.h: Fixed to use R_xlen_t instead
	of int for indexing and added warning when indexing by IntegerVector
	(only for large enough vectors)

2018-11-05  Dirk Eddelbuettel  <edd@debian.org>

        * DESCRIPTION (Date, Version): Version 1.0, and happy 10th birthday!

        * inst/include/Rcpp/config.h: Idem
        * inst/NEWS.Rd: Idem
        * inst/bib/Rcpp.bib: Idem
        * vignettes/Rcpp.bib: Idem

2018-11-04  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* README.md: Updated stated package and test numbers

2018-10-25  Kevin Ushey  <kevinushey@gmail.com>

	* inst/include/Rcpp/String.h: Use Rf_mkCharLenCE() as appropriate
	* inst/unitTests/cpp/String.cpp: Add unit tests
	* inst/unitTests/runit.String.R: Add unit tests

2018-10-12  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

	* tests/doRUnit.R: Simplified to something similar to what
	RcppArmadillo (and other packages) had for a while now

	* vignettes/Rcpp-unitTests.Rnw: Removed as less useful now

2018-10-08  JJ Allaire  <jj@rstudio.com>

	* R/Attributes.R: Sort the files scanned for attributes in the C locale
	for stable output across systems.

2018-10-07  Ralf Stubner  <ralf.stubner@daqana.com>

        * vignettes/Rcpp-extending.Rmd: Correct EXPORT to EXPOSED in displays
	of the corresponding macro, and remove two spurious semicolons

2018-10-02  Dirk Eddelbuettel  <edd@debian.org>

	* DESCRIPTION (Date, Version): Roll minor version
	* inst/include/Rcpp/config.h (RCPP_DEV_VERSION): Idem

2018-10-02  Romain Francois  <romain@rstudio.com>
